--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           echo "$GOOGLE_CLOUD_SSH_KEY" > ssh_key
           chmod 600 ssh_key
-          scp -v -i ssh_key -r ./dist/ $USERNAME@$SERVER_IP:/home/jasantise/HexaFront/dist  # Verifica que la ruta sea correcta
+          scp -v -i ssh_key -r ./dist $USERNAME@$SERVER_IP:/home/jasantise/HexaFront  # Verifica que la ruta sea correcta
 
       - name: Restart server
         env:
