--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,19 +1,16 @@
-name: CI/CD Pipeline for React App
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
-      - main  # Trigger on push to main branch
-  pull_request:
-    branches:
-      - main  # Trigger on PR to main branch
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout code
+      - name: Check out code
         uses: actions/checkout@v2
 
       - name: Set up Node.js
@@ -24,9 +21,35 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build the app
-        run: npm run build
+      - name: Build the project
+        run: npm run build  # Esto genera la carpeta dist/
 
-      - name: Deploy to production server
+      - name: List files after build  # Verifica si la carpeta dist está allí
+        run: ls -l ./dist  # Asegura que dist se genera correctamente
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Copy files to server
+        env:
+          GOOGLE_CLOUD_SSH_KEY: ${{ secrets.GOOGLE_CLOUD_SSH_KEY }}
+          SERVER_IP: ${{ secrets.SERVER_IP }}
+          USERNAME: ${{ secrets.USERNAME }}
         run: |
-          ssh -o StrictHostKeyChecking=no jasantise@34.175.254.144 'bash -s' < deploy.sh
+          echo "$GOOGLE_CLOUD_SSH_KEY" > ssh_key
+          chmod 600 ssh_key
+          # Usar la ruta absoluta para la carpeta dist en GitHub Actions
+          scp -v -i ssh_key -r /home/jasantise/HexaFront/dist/ $USERNAME@$SERVER_IP:/home/jasantise/HexaFront/dist
+
+      - name: Restart server
+        env:
+          GOOGLE_CLOUD_SSH_KEY: ${{ secrets.GOOGLE_CLOUD_SSH_KEY }}
+          SERVER_IP: ${{ secrets.SERVER_IP }}
+          USERNAME: ${{ secrets.USERNAME }}
+        run: |
+          ssh -i ssh_key $USERNAME@$SERVER_IP "pm2 restart hexa-app"  # Reinicia la aplicación en pm2
