--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,26 +19,13 @@ jobs:
           node-version: 22
 
       - name: Install Dependencies
-        run: npm i
+        run: npm install
 
       - name: Build Project
         run: npm run build
 
       - name: Deploy to Server
         uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.GOOGLE_CLOUD_SSH_KEY }}
-          script: |
-            cd /home/jasantise/HexaFront
-            git pull origin main
-            npm ci
-            npm run build
-            sudo cp -r dist/* /home/jasantise/HexaFront/dist
-            sudo systemctl restart nginx
-      - name: Deploy to Server
-        run: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.USERNAME }}
@@ -54,4 +41,3 @@ jobs:
             npm run build
             sudo cp -r dist/* /home/jasantise/HexaFront/dist
             sudo systemctl restart nginx
-
